# torchtree-bito

./: .pre-commit-config.yaml  Makefile  README.md  setup.cfg  setup.py
benchmarks/: benchmark.py
bitorch/: __init__.py  tree_likelihood.py  tree_model.py  utils.py
bitorch/cli/: evolution.py
examples/advi/: fluA-HKY.json
torchtree_bito/: __init__.py  _version.py  tree_likelihood.py  tree_model.py
torchtree_bito/cli/: __init__.py
